--- a/loltochess.html
+++ b/loltochess.html
@@ -7,16 +7,15 @@
 
 <body>
     <img src="펭수.jpg", width="450"><br><br>
-    게임의 전반적인 정보는 '롤체지지'에 잘 정리 되어 있다<br>
-    기본적으로 갤러리 내 공략탭, 각종사이트, 유튜브를 통해 정보를 찾아보는걸 추천<br>
+    모르는건 롤체지지에서 볼것<br>
+    롤체갤러리에서 보든가<br>
 
     <ul>
-        <li>노후화 방지를 위해 공략글과 정보글은 계속 첨삭할 예정</li><br>
+        <li>그냥 공략모아놓은것</li><br>
         <li>개인적으로 추천하는 글은 뒤에 * 표시</li><br>
-        <li>댓글에 수정이나 추가가 필요한 정보 남겨주면 본문에 반영</li><br>
     </ul>
 
-    <h1><strong><u>[공략돚거]</u></strong>(마지막 갱신일 2022.12.23)</h1><br>
+    <h1><strong><u>[공략모음]</u></strong></h1><br>
     <a href = 'https://gall.dcinside.com/mgallery/board/view/?id=tft&no=1571167' target="_blank" title="빌드업 공략">빌드업 공략</a><br><br>
     <a href = 'https://gall.dcinside.com/mgallery/board/view/?id=tft&no=1570257' target="_blank" title="삼신기 공략">삼신기 공략</a><br><br>
     <a href = 'https://gall.dcinside.com/mgallery/board/view/?id=tft&no=1569575' target="_blank" title="최종덱 공략(1)">최종덱 공략(1)</a><br><br>
